# Crazy-Mobile-Panel

./: README.md
Crazy Mobile Panel/app/src/main/: AndroidManifest.xml
Crazy Mobile Panel/app/src/main/cpp/: CMakeLists.txt  MemoryHelper.cpp  MemoryHelper.h  panel-lib.cpp
Crazy Mobile Panel/app/src/main/java/com/crazy/panel/: FloatingModMenuService.java  MainActivity.java  NativeBridge.java
